# SynthLang

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
proxy/: .dockerignore  .env.sample  DOCKER_README.md  Dockerfile  README.md  add_admin_role.py  apply_model_fix.sh  check_roles.py  client.env.sample  client_example.py  debug_client.py  deploy_forgiving.sh  docker-compose.yml  docker-setup.sh  fix_admin_user.py  fly.toml  init_db_roles.py  install.sh  install_dependencies.sh  install_flyctl.sh  pyproject.toml  redeploy.sh  requirements.txt  start.sh  synthlang_proxy.db  synthlang_proxy.db.backup  test-docker-setup.sh  test_api_raw.sh  test_claude_model.sh  update_admin_user.py
proxy/benchmark_results/: compression_20250322_235212_1ef46ca1-34c6-4ee1-a4a2-e8f8ad46b5ef.json  compression_20250322_235220_2a8f0595-9437-4db3-a15c-ebfc9f1b2f91.json  compression_20250322_235227_23692013-9e5c-4a0c-a818-1ac4fb4bc7d1.json  simple_20250322_233935_5e794211-2ecf-47b1-9301-1eabf39c0a9c.json  simple_20250322_234344_a0ca94cf-e4dc-4419-a792-8a7e2afc12e4.json  simple_20250322_235251_7f7ed6ee-84eb-4ba6-8adf-70f3eec8f537.json  simple_20250323_024912_90ad9cd9-4785-4653-8300-e038dea0120d.json  simple_20250323_025306_652abaa2-41c3-442b-83ae-1e7c08a17029.json  simple_20250323_025558_906ab345-0fee-412f-a330-3e65fe926272.json  simple_20250323_044557_db68e8ac-fdd2-4049-9768-a91815262da2.json  simple_20250323_045358_553c74de-c0e6-4f91-aa24-323f0e1b2371.json  simple_20250323_050202_949b2c70-d0f2-40c4-b549-be74904bf367.json  (+25 more)
proxy/config/: keywords.toml  (+1 more)
proxy/docs/: api.md  (+26 more)
(+259 files in other folders)
